# JollyAgent

./: .gitignore  README.md  activate_jollyagent.sh  docker-compose.yml  jollyagent.py  pyproject.toml  requirements.txt  tasks-PRD.md  undo_history.json
config/: flink-jobmanager-conf.yaml  flink-taskmanager-conf.yaml  kafka_config.yaml  monitoring_config.yaml
demo/: MEMORY_SYSTEM_SUMMARY.md  README.md  demo.py  kafka_integration_demo.py  kafka_topic_demo.py  memory_demo.py  simple_memory_demo.py
demo/monitoring/: README.md  __init__.py  integration_example.py  run_demo.py
dev-tool/: PRD.md  tasks-PRD.md  tasks-监控需求PRD.md  监控需求PRD.md
docker/clickhouse/: Dockerfile
docker/flink/: Dockerfile
docker/grafana/: Dockerfile
docker/kafka/: Dockerfile
docs/: custom_instrumentation_guide.md  kafka_topic_integration.md  monitoring_usage_guide.md
examples/: custom_instrumentation_example.py  instrumentation_magic_demo.py  monitoring_demo.py  monitoring_demo.py.bak  simple_instrumentation_demo.py
examples/mcp_demo/: debug_mcp.py  mcp_server_demo.py  test_mcp_client.py
jollyagent/: __init__.py
scripts/: README.md  create_kafka_topics.sh  health_check.sh  init_kafka_topics.sh  restart_monitoring.sh  start_monitoring.sh  status_monitoring.sh  stop_monitoring.sh  test_kafka_connection.sh
src/: __main__.py  agent.py  config.py  executor.py
src/cli/: __init__.py  __main__.py  cli.py  confirm.py  logging.py  undo.py
src/data_pipeline/: kafka_topic_design.py
src/memory/: __init__.py  coordinator.py  faiss_manager.py  long_term.py  manager.py  short_term.py
src/monitoring/: custom_instrumentation.py  data_collector.py  monitoring_manager.py  opentelemetry_integration.py  step_tracker.py
src/tools/: __init__.py  base.py  file.py  mcp.py  shell.py
tests/: kafka_topic_design_test.py  test_agent.py  test_agent_integration.py  test_agent_memory.py  test_api_connection.py  test_basic.py  test_config.py  test_mcp.py  test_memory.py  test_tools.py
tests/monitoring/: README.md  __init__.py  custom_instrumentation_test.py  data_collector_test.py  opentelemetry_integration_test.py  run_tests.py  step_tracker_test.py
